--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ body{
 }
 .mainBody{
 	background-color:white;
+	border: 1px solid #cccccc;
 }
 .mainBody p{
 	padding-left:20px;
@@ -68,7 +69,33 @@ body{
 	font-size:16pt;
 	font-weight:bold;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+	border:1px solid #cccccc;
+}
+
+/*Portfolio Section Begin*/
+#myImgHolder{
 	
+}
+.imgHolder{
+	Position:absolute;
+	z-index:1px;
+	bottom:0px;
+	
+}
+.contentDescription{
+	width:100%;
+	height:30px;
+	background-color:#4aaaaf;
+	position:absolute;
+	top:40px;
+	left:30px;
+	z-index:2;
+	text-align:center;
+	color:white;
+}
+/*Portfolio Section End*/
+.contactImages{
+	margin-right:30px;
 }
 .footer{
 	background-color:#666666;
