--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@ body{
 	color:#777777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	font-size:14pt;
+	background-color:white; 
+	position:relative; 
+	z-index:3; 
+	margin-top:50px;
 }
 .page-header h1{
 	padding-top:35px;
@@ -87,8 +91,7 @@ body{
 	height:30px;
 	background-color:#4aaaaf;
 	position:absolute;
-	top:40px;
-	left:30px;
+	bottom:10px;
 	z-index:2;
 	text-align:center;
 	color:white;
